# secure-join

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test.txt
Paillier/: CMakeLists.txt  Ciphertext.cpp  Ciphertext.h  Defines.h  Integer.cpp  Integer.h  Key.cpp  Key.h  Plaintext.cpp  Plaintext.h  RNG.h
Wrapper/: CMakeLists.txt  CWrapper.cpp  CWrapper.h  CppWrapper.cpp  CppWrapper.h  Debug.h  Defines.h  JNIExample.h  JniWrapper.cpp  PkgReqParser.h  com_visa_secureml_wrapper_SecJoinWrapper.h  config.h.in  state.h
cmake/: Config.cmake.in  (+5 more)
frontend/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.cpp
secure-join/: ALpnPrf.h  AdditivePerm.cpp  AdditivePerm.h  CMakeLists.txt  CSVParser.cpp  CSVParser.h  ComposedPerm.h  DLpnPrf.cpp  DLpnPrf.h  DarkMatter22Prf.cpp  DarkMatter22Prf.h  DarkMatter32Prf.h  DarkMatterPrf.cpp  DarkMatterPrf.h  Defines.h  InsecurePerm.h  LowMC.h  LowMCPerm.cpp  LowMCPerm.h  Matrix.h  OleGenerator.cpp  OleGenerator.h  PaillierPerm.cpp  PaillierPerm.h  Permutation.cpp  Permutation.h  RadixSort.cpp  RadixSort.h  SharePerm.cpp  SharePerm.h  SharedPerm.cpp  SharedPerm.h  Table.cpp  Table.h  Trim.h  Util.h  VectorPerm.cpp  VectorPerm.h  config.h.in  error.txt
secure-join/AggTree/: AggTree.cpp  AggTree.h  Level.cpp  Level.h  PerfectShuffle.h  PlainAggTree.cpp  PlainAggTree.h
secure-join/Aggregate/: Average.cpp  Average.h  Extract.cpp  RemDummies.cpp  RemDummies.h  Where.cpp  Where.h
secure-join/AltPsu/: AltPsu backup.cpp  AltPsu.cpp  AltPsu.h  AltPsu_correctness.cpp  AltPsu_debug.cpp  AltPsu_unbalance.cpp  gmw_test.cpp  temp.txt
secure-join/CorGenerator/: Base.h  Batch.cpp  Batch.h  BinOleBatch.cpp  BinOleBatch.h  CorGenerator.cpp  CorGenerator.h  Correlations.h  F4BitOtBatch.cpp  F4BitOtBatch.h  OtBatch.cpp  OtBatch.h  Request.cpp  Request.h  TritOtBatch.cpp
secure-join/CorGenerator/F4Vole/: F4CoeffCtx.h  SilentF4VoleReceiver.h  SilentF4VoleSender.h
secure-join/GMW/: Circuit.cpp  Circuit.h  Gmw.cpp  Gmw.h  SilentTripleGen.cpp  SilentTripleGen.h
secure-join/Join/: OmJoin.cpp  OmJoin.h  OoJoin.cpp  OoJoin.h  Table.cpp  Table.h
secure-join/PID/: AltModPID.cpp  AltModPID.h  backup.cpp  ddh_oprf.hpp
secure-join/PID/crypto/: aes.hpp  bigint.hpp  block.hpp  ec_25519.hpp  ec_group.hpp  ec_point.hpp  hash.hpp  setup.hpp
secure-join/PID/crypto/config/: config.h
secure-join/PID/crypto/netio/: stream_channel.hpp
secure-join/Perm/: AdditivePerm.cpp  AdditivePerm.h  AltModComposedPerm.cpp  AltModComposedPerm.h  AltModPerm.cpp  AltModPerm.h  AltModPerm_.cpp  AltModPerm_.h  ComposedPerm.cpp  ComposedPerm.h  DLpnPerm.cpp  DLpnPerm.h  InsecurePerm.h  LowMCPerm.cpp  LowMCPerm.h  PaillierPerm.h  PermCorrelation.cpp  PermCorrelation.h  Permutation.cpp  Permutation.h  PprfPermGen.h
secure-join/Prf/: AltModKeyMult.cpp  AltModKeyMult.h  AltModPrf.cpp  AltModPrf.h  AltModPrfProto.cpp  AltModPrfProto.h  AltModSimd.h  AltModWPrf.cpp  AltModWPrf.h  ConvertToF3.cpp  ConvertToF3.h  DLpnPrf.cpp  DLpnPrf.h  DarkMatter22Prf.cpp  DarkMatter22Prf.h  DarkMatter32Prf.h  F2LinearCode.cpp  F2LinearCode.h  F3LinearCode.h  LowMC.h  mod3.cpp  mod3.h
secure-join/Sort/: BitInjection.cpp  BitInjection.h  RadixSort.cpp  RadixSort.h
secure-join/TableOps/: Extract.cpp  GroupBy.cpp  Where.cpp  WhereParser.cpp
secure-join/Util/: ArrGate.h  CSVParser.cpp  CSVParser.h  Matrix.h  Simd.h  Trim.h  Util.h
secure-join/volePSI/: Paxos.h  PaxosImpl.h  PxUtil.h  RsOprf.cpp  RsOprf.h  SimpleIndex.cpp  SimpleIndex.h
tests/: AdditivePerm_Test.cpp  AdditivePerm_Test.h  AggTree_Tests.cpp  AggTree_Tests.h  AltModPerm_Test.cpp  AltModPerm_Test.h  AltModPrf_Test.cpp  AltModPrf_Test.h  AltModWPrf_Test.cpp  AltModWPrf_Test.h  Average_Test.cpp  Average_Test.h  CMakeLists.txt  CSVParser_Test.cpp  CSVParser_Test.h  CWrapper_Test.cpp  CWrapper_Test.h  ComposedPerm_Test.cpp  ComposedPerm_Test.h  CorGenerator_Test.cpp  CorGenerator_Test.h  DarkMatterPrf_Test.cpp  DarkMatterPrf_Test.h  DlpnPerm_Test.cpp  DlpnPerm_Test.h  Extract_Test.cpp  F4Vole_Test.cpp  FileContent.h  GMW_Test.cpp  GMW_Test.h  GroupBy_Test.cpp  LowMCPerm_Test.cpp  LowMCPerm_Test.h  OleGenerator_Test.cpp  OleGenerator_Test.h  OmJoin_Test.cpp  OmJoin_Test.h  PaillierPerm_Test.cpp  PaillierPerm_Test.h  RadixSort_Test.cpp  (+12 more)
tests/tables/: bank.csv  bank_meta.txt  m-bank.csv_backup  visa.csv  visa_meta.txt
usenix2025/balanced_ePSU/: CMakeLists.txt
usenix2025/balanced_ePSU/epsu/: balanced_epsu.cpp  balanced_epsu.h
usenix2025/balanced_ePSU/libvolepsi/include/libOTe/: config.h
usenix2025/balanced_ePSU/libvolepsi/lib/: libboost_filesystem.so.1.86.0  libboost_regex.so.1.86.0  libboost_system.so.1.86.0  libboost_thread.so.1.86.0
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_atomic-1.86.0/: boost_atomic-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_date_time-1.86.0/: boost_date_time-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_filesystem-1.86.0/: boost_filesystem-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_headers-1.86.0/: boost_headers-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_regex-1.86.0/: boost_regex-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_system-1.86.0/: boost_system-config.cmake
usenix2025/balanced_ePSU/libvolepsi/lib/cmake/boost_thread-1.86.0/: boost_thread-config.cmake  libboost_thread-variant-shared.cmake  libboost_thread-variant-static.cmake
usenix2025/balanced_ePSU/pnmcrg/: Defines.h  curve25519.cpp  pnMCRG.cpp  pnMCRG.h  ssPEQT.cpp  ssPEQT.h  ssROT.cpp  ssROT.h
usenix2025/balanced_ePSU/test/: test_balanced_epsu.cpp  test_necrg.cpp  test_pecrg.cpp  test_pmcrg.cpp  test_pnmcrg.cpp
usenix2025/unbalanced_ePSU/pECRG_nECRG_OTP/: CMakeLists.txt
usenix2025/unbalanced_ePSU/pECRG_nECRG_OTP/pecrg_necrg_otp/: pECRG_nECRG_OTP.cpp  pECRG_nECRG_OTP.h
usenix2025/unbalanced_ePSU/pECRG_nECRG_OTP/pnecrg/: Circuit.cpp  Circuit.h  curve25519.h  define.h  global.h  pnECRG.cpp  pnECRG.h
usenix2025/unbalanced_ePSU/pECRG_nECRG_OTP/test/: test_pecrg.cpp  test_pecrg_necrg_otp.cpp  test_pnecrg.cpp
(+91 files in other folders)
